fix overscroll on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -306,6 +306,9 @@ html {
 @media (max-width: 63.999rem) {
   html,
   body {
+    position: fixed;
+    inset: 0;
+    width: 100%;
     height: 100%;
     overflow: hidden;
   }
